objects/Case.object
<CustomObject>
    <fields>
        <fullName>SD_MemberType__c</fullName>
        <description>SD Health: Indicates the customer&apos;s membership type with Liberty and it is used to identify which queue the case is routed to.</description>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Group (HR)</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SD_PreferredMethodOfContact__c</fullName>
        <label>Preferred Method Of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SD_ProductType__c</fullName>
        <description>SD Health: Indicates which product the customer has and it is used to identify which queue the case is routed to.</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prestige</fullName>
                </value>
                <value>
                    <fullName>Vale</fullName>
                </value>
                <value>
                    <fullName>Liberty Blue</fullName>
                </value>
                <value>
                    <fullName>Corredor</fullName>
                </value>
                <value>
                    <fullName>Liberty Health Cover (LHC)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>SLC_LISP Domestic</fullName>
                    <label>LISP Domestic</label>
                </value>
                <value>
                    <fullName>SLC_LISP Offshore</fullName>
                    <label>LISP Offshore</label>
                </value>
                <value>
                    <fullName>SLC_Unit Trust Domestic</fullName>
                    <label>Unit Trust Domestic</label>
                </value>
                <value>
                    <fullName>SLC_Unit Trust Offshore</fullName>
                    <label>Unit Trust Offshore</label>
                </value>
                <value>
                    <fullName>SLC_Non Platform Related</fullName>
                    <label>Non Platform Related</label>
                </value>
                <value>
                    <fullName>LISP (Domestic)</fullName>
                    <isActive>false</isActive>
                    <label>LISP (Domestic)</label>
                </value>
                <value>
                    <fullName>LISP (Offshore)</fullName>
                    <isActive>false</isActive>
                    <label>LISP (Offshore)</label>
                </value>
                <value>
                    <fullName>Non-Platform Related</fullName>
                    <isActive>false</isActive>
                    <label>Non-Platform Related</label>
                </value>
                <value>
                    <fullName>Unit Trust (Domestic)</fullName>
                    <isActive>false</isActive>
                    <label>Unit Trust (Domestic)</label>
                </value>
                <value>
                    <fullName>Unit Trust (Offshore)</fullName>
                    <isActive>false</isActive>
                    <label>Unit Trust (Offshore)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SD_SLAIndicator__c</fullName>
        <description>Displays a positive or negative indicator based on the age of the case.</description>
        <formula>IF
(
	SD_AgeOfCaseInHours__c &gt; 44, 
	IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;negative&quot;,15,15),
	IF
	(
		SD_AgeOfCaseInHours__c  &gt; 26,
		IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;neutral&quot;,15,15),
		IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;positive&quot;,15,15)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_SlaEndDate__c</fullName>
        <description>The End Date to use when calculating a Age of Case</description>
        <formula>BLANKVALUE(ClosedDate, NOW())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SD_SlaStartDate__c</fullName>
        <description>Used when calculating Age of Case, represents the First Monday in the past that is on the 1st of January</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SD_StartDateTimeForFirstMonday__c</fullName>
        <description>Used when calculating Case Age</description>
        <formula>DATETIMEVALUE(&apos;2018-01-01 08:00:00&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date Time for First Monday</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SD_Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_TypeOfEnquiry__c</fullName>
        <description>SD Health: Indicates what assistance the website user needs assistance with and it is used to identify which queue the case is routed to.</description>
        <label>Type of Enquiry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Preauthorisation</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Update Contact Details</fullName>
                </value>
                <value>
                    <fullName>Provider Networks</fullName>
                </value>
                <value>
                    <fullName>Claim Statement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Benefit Confirmation</fullName>
                </value>
                <value>
                    <fullName>Commission Due</fullName>
                </value>
                <value>
                    <fullName>Commission Paid</fullName>
                </value>
                <value>
                    <fullName>Statements</fullName>
                </value>
                <value>
                    <fullName>Employee Related</fullName>
                </value>
                <value>
                    <fullName>Emergencies</fullName>
                </value>
                <value>
                    <fullName>Product &amp; Pricing</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>General Enquiry</fullName>
                </value>
                <value>
                    <fullName>Product &amp;amp; Pricing</fullName>
                    <isActive>false</isActive>
                    <label>Product &amp;amp; Pricing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SD_WebOrigin__c</fullName>
        <description>This field provide a reference of Web Chat source.</description>
        <label>Web Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>South Africa Web</fullName>
                </value>
                <value>
                    <fullName>Mozambique Web</fullName>
                </value>
                <value>
                    <fullName>Uganda Web</fullName>
                </value>
                <value>
                    <fullName>Malawi Web</fullName>
                </value>
                <value>
                    <fullName>Mozambique Vale</fullName>
                </value>
                <value>
                    <fullName>Liberty Health Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_CallReason__c</fullName>
        <description>Capturing the reason for the call.  What the client is enquiring about</description>
        <label>Call Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SLC_ATM Linking</fullName>
                    <label>ATM Linking</label>
                </value>
                <value>
                    <fullName>SLC_Auto Response</fullName>
                    <label>Auto Response</label>
                </value>
                <value>
                    <fullName>SLC_Bot or Live Agent</fullName>
                    <label>Bot or Live Agent</label>
                </value>
                <value>
                    <fullName>SLC_CFP</fullName>
                    <label>CFP</label>
                </value>
                <value>
                    <fullName>SLC_Commission</fullName>
                    <label>Commission</label>
                </value>
                <value>
                    <fullName>SLC_Estate Late</fullName>
                    <label>Estate Late</label>
                </value>
                <value>
                    <fullName>SLC_FSP Maintenance</fullName>
                    <label>FSP Maintenance</label>
                </value>
                <value>
                    <fullName>SLC_Fundisa</fullName>
                    <label>Fundisa</label>
                </value>
                <value>
                    <fullName>SLC_General Information</fullName>
                    <label>General Information</label>
                </value>
                <value>
                    <fullName>SLC_Investment</fullName>
                    <label>Investment</label>
                </value>
                <value>
                    <fullName>SLC_IVR</fullName>
                    <label>IVR</label>
                </value>
                <value>
                    <fullName>SLC_Mobile App and Banking</fullName>
                    <label>Mobile App and Banking</label>
                </value>
                <value>
                    <fullName>SLC_Offshore</fullName>
                    <label>Offshore</label>
                </value>
                <value>
                    <fullName>SLC_Queries</fullName>
                    <label>Queries</label>
                </value>
                <value>
                    <fullName>SLC_Repurchase</fullName>
                    <label>Repurchase</label>
                </value>
                <value>
                    <fullName>SLC_Robo Advisor</fullName>
                    <label>Robo Advisor</label>
                </value>
                <value>
                    <fullName>SLC_SDU</fullName>
                    <label>SDU</label>
                </value>
                <value>
                    <fullName>SLC_SMS Balance</fullName>
                    <label>SMS Balance</label>
                </value>
                <value>
                    <fullName>SLC_STANLIB Online</fullName>
                    <label>STANLIB Online</label>
                </value>
                <value>
                    <fullName>SLC_Statements and Balances</fullName>
                    <label>Statements and Balances</label>
                </value>
                <value>
                    <fullName>SLC_Switches and Transfers</fullName>
                    <label>Switches and Transfers</label>
                </value>
                <value>
                    <fullName>SLC_Tax Certificates</fullName>
                    <label>Tax Certificates</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_CaseReason__c</fullName>
        <description>Dependent picklist value for the Call Reason</description>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SLC_CallReason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SLC_1nvest</fullName>
                    <label>1nvest</label>
                </value>
                <value>
                    <fullName>SLC_AppLinkingqueries</fullName>
                    <label>App Linking queries</label>
                </value>
                <value>
                    <fullName>SLC_Appnavigation</fullName>
                    <label>App navigation</label>
                </value>
                <value>
                    <fullName>SLC_ATMLinkingstatus</fullName>
                    <label>ATM Linking status</label>
                </value>
                <value>
                    <fullName>SLC_ATMNavigation</fullName>
                    <label>ATM Navigation</label>
                </value>
                <value>
                    <fullName>SLC_ATMOutofSLA</fullName>
                    <label>ATM Out of SLA</label>
                </value>
                <value>
                    <fullName>SLC_ATMWithinSLA</fullName>
                    <label>ATM Within SLA</label>
                </value>
                <value>
                    <fullName>SLC_Auto Response email</fullName>
                    <label>Auto Response email</label>
                </value>
                <value>
                    <fullName>SLC_BalancesandStatements</fullName>
                    <label>Balances and Statements</label>
                </value>
                <value>
                    <fullName>SLC_BankVerificationorConfirmation</fullName>
                    <label>Bank Verification/Confirmation</label>
                </value>
                <value>
                    <fullName>SLC_Businessrules</fullName>
                    <label>Business rules</label>
                </value>
                <value>
                    <fullName>SLC_Calculationrequests</fullName>
                    <label>Calculation requests</label>
                </value>
                <value>
                    <fullName>SLC_Cessions</fullName>
                    <label>Cessions</label>
                </value>
                <value>
                    <fullName>SLC_CFPChanges</fullName>
                    <label>CFP Changes</label>
                </value>
                <value>
                    <fullName>SLC_CGTquery</fullName>
                    <label>CGT query</label>
                </value>
                <value>
                    <fullName>SLC_Changebankdetails</fullName>
                    <label>Change bank details</label>
                </value>
                <value>
                    <fullName>SLC_ChangeCellphonenumber</fullName>
                    <label>Change Cell phone number</label>
                </value>
                <value>
                    <fullName>SLC_Changeemailaddress</fullName>
                    <label>Change email address</label>
                </value>
                <value>
                    <fullName>SLC_Changepostaladdress</fullName>
                    <label>Change postal address</label>
                </value>
                <value>
                    <fullName>SLC_Changeresidentialaddress</fullName>
                    <label>Change residential address</label>
                </value>
                <value>
                    <fullName>SLC_CommissionStatement</fullName>
                    <label>Commission Statement</label>
                </value>
                <value>
                    <fullName>SLC_Communication</fullName>
                    <label>Communication</label>
                </value>
                <value>
                    <fullName>SLC_Complaints</fullName>
                    <label>Complaints</label>
                </value>
                <value>
                    <fullName>SLC_Confirmbalance</fullName>
                    <label>Confirm balance</label>
                </value>
                <value>
                    <fullName>SLC_Correspondence</fullName>
                    <label>Correspondence</label>
                </value>
                <value>
                    <fullName>SLC_Debitordercancelled</fullName>
                    <label>Debit order cancelled</label>
                </value>
                <value>
                    <fullName>SLC_Debitorderduplicated</fullName>
                    <label>Debit order duplicated</label>
                </value>
                <value>
                    <fullName>SLC_Debitordernotcancelled</fullName>
                    <label>Debit order not cancelled</label>
                </value>
                <value>
                    <fullName>SLC_Debitorderqueries</fullName>
                    <label>Debit order queries</label>
                </value>
                <value>
                    <fullName>SLC_DeditorderorCFPupdate</fullName>
                    <label>Dedit order/CFP update</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_InternalReviewStatus__c</fullName>
        <description>Status when a Case Status is under Internal Review</description>
        <label>Internal Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>IT Systems</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Processing SLA</fullName>
                </value>
                <value>
                    <fullName>Processing Fix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_Segment__c</fullName>
        <description>Reflect Broker Parent Account</description>
        <formula>Account.AW_ParentAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLC_SupportReason__c</fullName>
        <description>STANLIB Institutional, LISP and Corporate Cash Support Reason</description>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SLC_SupportType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SLI_Pricing</fullName>
                    <label>Pricing</label>
                </value>
                <value>
                    <fullName>SLI_IncomeDistribution</fullName>
                    <label>Income Distribution</label>
                </value>
                <value>
                    <fullName>SLI_Yields</fullName>
                    <label>Yields</label>
                </value>
                <value>
                    <fullName>SLI_ExplanationRequired</fullName>
                    <label>Explanation Required</label>
                </value>
                <value>
                    <fullName>SLI_Regulatory</fullName>
                    <label>Regulatory</label>
                </value>
                <value>
                    <fullName>SLI_MonthYearEnd</fullName>
                    <label>Month End / Year End</label>
                </value>
                <value>
                    <fullName>SLI_AnnualAudit</fullName>
                    <label>Annual Audit</label>
                </value>
                <value>
                    <fullName>SLI_Error</fullName>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>SLI_FundFactSheet</fullName>
                    <label>Fund Fact Sheet</label>
                </value>
                <value>
                    <fullName>SLI_Policy</fullName>
                    <label>Policy</label>
                </value>
                <value>
                    <fullName>SLI_CompanyInformation</fullName>
                    <label>Company Information</label>
                </value>
                <value>
                    <fullName>SLI_AuthorisedSignatory</fullName>
                    <label>Authorised Signatory</label>
                </value>
                <value>
                    <fullName>SLI_Company</fullName>
                    <label>Company</label>
                </value>
                <value>
                    <fullName>SLI_Invoices</fullName>
                    <label>Invoices</label>
                </value>
                <value>
                    <fullName>SLI_TER</fullName>
                    <label>TER</label>
                </value>
                <value>
                    <fullName>SLI_FeeConfirmation</fullName>
                    <label>Fee Confirmation</label>
                </value>
                <value>
                    <fullName>SLI_TIR</fullName>
                    <label>TIR</label>
                </value>
                <value>
                    <fullName>SLI_BalanceRequest</fullName>
                    <label>Balance Request</label>
                </value>
                <value>
                    <fullName>SLI_Query</fullName>
                    <label>Query</label>
                </value>
                <value>
                    <fullName>SLI_ValueDate</fullName>
                    <label>Value Date</label>
                </value>
                <value>
                    <fullName>SLI_ChangeInDetails</fullName>
                    <label>Change in Details</label>
                </value>
                <value>
                    <fullName>SLI_FeeRequest</fullName>
                    <label>Fee Request</label>
                </value>
                <value>
                    <fullName>SLI_FundInformation</fullName>
                    <label>Fund Information</label>
                </value>
                <value>
                    <fullName>SLI_Forms</fullName>
                    <label>Forms</label>
                </value>
                <value>
                    <fullName>SLI_DraftPMA</fullName>
                    <label>Draft PMA</label>
                </value>
                <value>
                    <fullName>SLI_NextStep</fullName>
                    <label>Next Step</label>
                </value>
                <value>
                    <fullName>SLI_TurnaroundTime</fullName>
                    <label>Turnaround Time</label>
                </value>
                <value>
                    <fullName>SLR_IncorrectInformation</fullName>
                    <label>Incorrect Information</label>
                </value>
                <value>
                    <fullName>SLC_FollowUp</fullName>
                    <label>Follow Up</label>
                </value>
                <value>
                    <fullName>SLR_NewClient</fullName>
                    <label>New Client</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_SupportTeam__c</fullName>
        <description>STANLIB Support Teams for Institutional and Retail</description>
        <label>Client Experience Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SLSC_Institutional</fullName>
                    <label>Institutional</label>
                </value>
                <value>
                    <fullName>SLSC_CorporateCash</fullName>
                    <label>Corporate Cash</label>
                </value>
                <value>
                    <fullName>SLSC_LISP</fullName>
                    <label>LISP</label>
                </value>
                <value>
                    <fullName>SLSC_DFM</fullName>
                    <label>Discretionary Fund Management (DFM)</label>
                </value>
                <value>
                    <fullName>SLR_TalkToABDM</fullName>
                    <label>Talk to a BDM</label>
                </value>
                <value>
                    <fullName>SLSC_CPDCertification</fullName>
                    <label>CPD Certification</label>
                </value>
                <value>
                    <fullName>SLSC_PlatformLISP</fullName>
                    <isActive>false</isActive>
                    <label>Platform (LISP)</label>
                </value>
                <value>
                    <fullName>SLSC_UnitTrust</fullName>
                    <isActive>false</isActive>
                    <label>Unit Trust</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_SupportType__c</fullName>
        <description>Support Request Type for Institutional, LISP, Corporate and Retail Cases</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SLC_SupportTeam__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SLI_FundPerformance</fullName>
                    <label>Fund Performance</label>
                </value>
                <value>
                    <fullName>SLI_Reporting</fullName>
                    <label>Reporting</label>
                </value>
                <value>
                    <fullName>SLI_DocumentRequest</fullName>
                    <label>Document Request</label>
                </value>
                <value>
                    <fullName>SLI_InformationUpdate</fullName>
                    <label>Information Update</label>
                </value>
                <value>
                    <fullName>SLI_Fees</fullName>
                    <label>Fees</label>
                </value>
                <value>
                    <fullName>SLI_Transaction</fullName>
                    <label>Transaction</label>
                </value>
                <value>
                    <fullName>SLI_OnlineAccess</fullName>
                    <label>Online Access</label>
                </value>
                <value>
                    <fullName>SLI_NewInvestment</fullName>
                    <label>New Investment</label>
                </value>
                <value>
                    <fullName>SLI_Escalation</fullName>
                    <label>Escalation</label>
                </value>
                <value>
                    <fullName>SLR_AdHocReportRequest</fullName>
                    <label>Ad Hoc Report Request</label>
                </value>
                <value>
                    <fullName>SLR_AuditCertificate</fullName>
                    <label>Audit Certificate</label>
                </value>
                <value>
                    <fullName>SLR_AuditReportRequest</fullName>
                    <label>Audit Report Request</label>
                </value>
                <value>
                    <fullName>SLR_BalanceRequest</fullName>
                    <label>Balance Request</label>
                </value>
                <value>
                    <fullName>SLR_BankingDetailAmendment</fullName>
                    <label>Banking Detail Amendment</label>
                </value>
                <value>
                    <fullName>SLR_ChangeOfAddress</fullName>
                    <label>Change of Address</label>
                </value>
                <value>
                    <fullName>SLR_Complaint</fullName>
                    <label>Complaint</label>
                </value>
                <value>
                    <fullName>SLR_ContactPersonOrRoleChange</fullName>
                    <label>Contact Person or Role Change</label>
                </value>
                <value>
                    <fullName>SLR_FollowUp</fullName>
                    <label>Follow Up</label>
                </value>
                <value>
                    <fullName>SLR_FormRequest</fullName>
                    <label>Form Request</label>
                </value>
                <value>
                    <fullName>SLR_FundFactSheet</fullName>
                    <label>Fund Fact Sheet</label>
                </value>
                <value>
                    <fullName>SLR_MonthlyStatement</fullName>
                    <label>Monthly Statement</label>
                </value>
                <value>
                    <fullName>SLR_Question</fullName>
                    <label>Question</label>
                </value>
                <value>
                    <fullName>SLR_SignatoryAmendment</fullName>
                    <label>Signatory Amendment</label>
                </value>
                <value>
                    <fullName>SLR_Statement</fullName>
                    <label>Statement</label>
                </value>
                <value>
                    <fullName>SLR_SpeakToABDM</fullName>
                    <label>Speak to a BDM</label>
                </value>
                <value>
                    <fullName>SLR_FundInformation</fullName>
                    <label>Fund Information</label>
                </value>
                <value>
                    <fullName>SLR_PerformanceQuery</fullName>
                    <label>Performance Query</label>
                </value>
                <value>
                    <fullName>SLR_ProductQuery</fullName>
                    <label>Product Query</label>
                </value>
                <value>
                    <fullName>SLC_CPDQuery</fullName>
                    <label>CPD Query</label>
                </value>
                <value>
                    <fullName>SLR_IncorrectInformation</fullName>
                    <label>Incorrect Information</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLI_CasePriority__c</fullName>
        <description>STALIB Institutional Account Case Priority</description>
        <formula>TEXT(Account.SLI_CasePrioritisation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_EscalatedDateTime__c</fullName>
        <description>Date and Time when a Case was escalated by a Client</description>
        <label>Escalated Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLI_EscalationDescription__c</fullName>
        <description>Escalation Description for Portal Inst Clients</description>
        <label>Escalation Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLI_EscalationReason__c</fullName>
        <description>Used to capture Escalation Reason</description>
        <label>Escalation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consultant seemed inexperienced</fullName>
                </value>
                <value>
                    <fullName>Consultant was unprofessional</fullName>
                </value>
                <value>
                    <fullName>Response time was poor</fullName>
                </value>
                <value>
                    <fullName>I am not satisfied with the response received</fullName>
                </value>
                <value>
                    <fullName>Onerous or unclear business requirements</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLI_FundName__c</fullName>
        <description>Used to store the fund name for a STANLIB institutional onboarding case raised through the portal</description>
        <label>Fund name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLI_InvestmentValue__c</fullName>
        <description>Used by STANLIB institutional portal users to identify their investment value when initiating an onboarding process</description>
        <label>Investment Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>